[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Louise de Ferran <louise.deferran@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "snake.main:hello"
jeu="snake.background:jeu"

