[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Louise de Ferran <louise.deferran@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "snake.main:hello"
jeu="snake.background:jeu"
jeu_bis="snake.background:jeu_bis"


